--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <div class="dice-container">
       
       <div class="dice">
-          <p>Player 1</p>
+          <p>Dice 1</p>
           <img id="img1" src="images/dice6.png">
       </div>
 
       <div class="dice">
-          <p>Player 2</p>
+          <p>Dice 2</p>
           <img id="img2" src="images/dice6.png">
       </div>
 
